@@ -89,13 +89,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      Cumulative patch: http://svn.apache.org/viewvc/httpd/httpd/trunk/modules/database/mod_dbd.c?r1=466641&r2=420983&pathrev=466641
      +1: minfrin, niq, wrowe
 
-   * mod_ldap: Better detection and clean up of ldap connection
-     that have been terminated by the ldap server.
-     http://svn.apache.org/viewvc?view=rev&revision=472633
-     +1: bnicholes, jim, wrowe
-     wrowe adds; keeping the old idents for backporting would have
-                 made this alot easier for review - mind \x09's please.
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 
     * mpm_winnt: Fix return values from wait_for_many_objects.
