@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.4
 
+  *) Better detection and clean up of ldap connection that has been
+     terminated by the ldap server.  PR 40878.
+     [Rob Baily <rbaily servicebench com>]
+
   *) mod_mem_cache: Convert mod_mem_cache to use APR memory pool functions
      by creating a root pool for object persistence across requests. This
      also eliminates the need for custom serialization code.
